successfully templates info from database

--- a/views/facilities.hbs
+++ b/views/facilities.hbs
@@ -1,2 +1,5 @@
-<p>{{name}}</p>
-<p>{{booking}}</p>
+<h1>{{facility.name}}</h1>
+
+{{!-- <p>initialoutlay: {{facility.initialoutlay}}</p> --}}
+<p>Member cost: ${{facility.membercost}}</p>
+<p>Guest cost: ${{facility.guestcost}}</p>
