--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,26 @@ body {
 a {
   color: #00B7FF;
 }
+
+.container-fluid {
+  display: inline-block;
+  background-image: url("https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAAxvAAAAJGE1NjljZDI5LWI3ZWUtNDU1OC05ZTM3LTlhZDg0ZTY2M2ExNw.jpg");
+  border-radius: 10px;
+  border: 1px solid goldenrod;
+  margin: 5px;
+  text-align: center;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+/* @media screen and (min-width: 825px) {
+
+ }  */
+
+.header {
+  color: goldenrod;
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: black;
+
+}
+   
