--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: silver;
 }
 
 a {
@@ -25,7 +26,10 @@ a {
   color: goldenrod;
   text-align: center;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: black;
-
+  background-image: url("http://i2.wp.com/www.pixelophy.com/wp-content/uploads/2014/08/royal-velvet-cloth.png?fit=1280%2C720");
+  height: 5rem;
+  line-height: 5rem;
 }
+
+
    
